--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -275,7 +274,6 @@ body {
   cursor: pointer;
 }
 
-
 .search {
   display: flex;
   align-items: center;
@@ -364,7 +362,6 @@ body {
   color: white; /* Cambia el color del texto cuando se pasa el mouse sobre el botón */
 }
 
-
 /* Estilos para LocationCard */
 .location-card {
   border: 1px solid #ccc;
@@ -436,7 +433,6 @@ body {
 }
 
 
-
 /* Estilos para el contenedor del logo y el menú de navegación */
 .navbar {
   display: flex;
@@ -503,12 +499,10 @@ body {
 
 
 
-
 .search-container {
   padding:40px;
   margin-bottom: 40px; /* Ajuste para aumentar el espacio */
 }
-
 
 .location-search {
   display: flex;
@@ -525,7 +519,6 @@ body {
   width: calc(100% - 2px); /* Ancho igual al elemento padre menos los bordes */
   z-index: 1; /* Asegurar que esté por encima de otros elementos */
 }
-
 
 
 
@@ -550,7 +543,6 @@ body {
 
 
 
-
 /* En lugar de unidades fijas como píxeles, utilizaremos unidades relativas */
 
 /* Ajuste del padding y borde */
@@ -568,7 +560,6 @@ body {
 .adults-label {
   font-size: 1em; /* Tamaño de fuente relativo */
 }
-
 
 /* Reorganización de elementos para pantallas más pequeñas */
 @media screen and (max-width: 768px) {
@@ -595,7 +586,6 @@ body {
     margin-bottom: 2%; /* Ajustar margen inferior */
   }
 }
-
 
 
 /* Estilos para el contenedor del formulario de búsqueda */
@@ -708,3 +698,72 @@ body {
     margin-top: 10px;
   }
 }
+
+
+
+
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.card__image {
+  width: 100%; /* Establece el ancho al 100% para que se ajuste al contenedor */
+  height: 200px; /* Establece la altura deseada para todas las imágenes */
+  object-fit: cover; /* Para mantener la relación de aspecto y rellenar el espacio */
+}
+
+.card__details {
+  padding: 20px;
+}
+
+.card__title {
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.card__location,
+.card__type,
+.card__rating,
+.card__superhost,
+.card__guests,
+.card__beds {
+  margin: 5px 0;
+}
+
+
+
+
+.card {
+  position: relative;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(128, 128, 128, 0.5); /* Color gris semitransparente */
+  border-radius: 8px; /* Ajusta según el radio de la tarjeta */
+  z-index: 1; /* Coloca la capa detrás del contenido */
+}
+
+.card__details {
+  position: relative; /* Asegura que el contenido esté por encima de la capa */
+  z-index: 2; /* Coloca el contenido por encima de la capa */
+  /* Agrega otros estilos necesarios para el contenido de la tarjeta */
+}
+
+
+
+
+
+
